# taylor_learns

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  Dockerfile.dev  Dockerfile.web  LICENSE.md  Makefile  README.md  custom.mk  docker-compose.yml  docker_startup.sh  manage.py  package-lock.json  package.json  pegasus-config.yaml  pyproject.toml  tailwind.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  deploy_coolify.yml
.kamal/: secrets.example
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: knowledge-base.md
.planning/debug/resolved/: bluesky-admin-source-settings-500.md
.planning/phases/01-source-setup-and-import-scope/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-deterministic-import-and-auto-publish/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-post-lifecycle-reconciliation-and-run-visibility/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-scheduled-sync-and-concurrency-safety/: 04-01-PLAN.md  04-01-SUMMARY.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/quick/260320-j0d-update-feed-blog-to-sort-by-date-origina/: 260320-j0d-PLAN.md  260320-j0d-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
api-client/: runtime.ts
apps/ai/tools/: weather.py
apps/bluesky/: admin.py  apps.py  client.py  forms.py  models.py  publish.py  reconcile.py  sync.py  tasks.py  transform.py
apps/bluesky/migrations/: 0001_initial.py  0002_blueskypostmap.py  0003_blueskypostmap_removed_at.py  0004_blueskysyncrun.py  0005_blueskysourcesettings_sync_lock_fields.py
apps/bluesky/services/: identity.py
apps/bluesky/tests/: test_admin_source_settings.py  test_identity_service.py  test_post_map_model.py  test_publish.py  test_reconcile.py  test_scheduled_sync.py  test_settings_model.py  test_sync_bluesky_command.py  test_sync_concurrency.py  test_sync_lifecycle_reconciliation.py  test_sync_run_visibility.py  test_transform.py
apps/chat/: consumers.py  routing.py
apps/content/: models.py
apps/content/migrations/: 0004_alter_blogpage_intro.py  0005_contentpagetag_blogindexpage_tags_blogpage_tags_and_more.py  0006_profilepage.py
apps/content/tests/: test_blog_index_ordering.py
apps/gadgets/: admin.py  apps.py  models.py  sync.py  tasks.py  urls.py  views.py
apps/gadgets/migrations/: 0001_initial.py
apps/gadgets/tests/: test_create_gadget_command.py  test_sync_gadgets_command.py  test_visibility_controls.py
apps/users/: admin.py
apps/web/: context_processors.py  gadgets.py  meta.py  storage_backends.py  template_checks.py  urls.py  views.py
assets/styles/: site-tailwind.css
config/: README.md  deploy.yml
gadgets/tmux-dojo/: AGENT.md  app.js  core.js  gadget.json  index.html  styles.css
scripts/: check_template_classes.py  sync_prod_db.sh  verify_models.py
taylor_learns/: asgi.py  celery.py  settings.py  settings_production.py  urls.py  wsgi.py
templates/content/: base.html  blog_index_page.html  blog_page.html  content_page.html  external_link_page.html  micro_post_page.html  portfolio_index_page.html  profile_page.html  project_page.html
templates/dashboard/: user_dashboard.html
templates/web/: base.html  design_showcase.html  home.html  typography.html
(+25 files in other folders)
