[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    ".direnv",
    ".git",
    ".ruff_cache",
    "node_modules",
    "migrations",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
fixable = [
    "ALL",
]
unfixable = []
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools]
py-modules = []

[project]
name = "taylor-learns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "Django>=5.2.8",
    "boto3",
    "celery",
    "celery-progress",
    "celery[redis]",
    "channels",
    "channels_redis",
    "cryptography>=46.0.5",
    "django-allauth[socialaccount,mfa,headless]>=65.13.0",
    "django-anymail[mailgun]", # email services
    "django-browser-reload",
    "django-celery-beat",
    "django-cors-headers",
    "django-environ",
    "django-health-check",
    "django-hijack",
    "django-htmx",
    "django-storages",
    "django-taggit>=6.1.0",
    "django-template-partials",
    "django-vite>=3.1.0",
    "django-waffle",
    "djangorestframework",
    "djangorestframework-api-key",
    "docutils",
    "drf-spectacular",
    "filelock>=3.20.3",
    "httpx>=0.28.1",
    "markdown",
    "nh3>=0.2.21",
    "psycopg2-binary",
    "pyasn1>=0.6.3",
    "pyopenssl>=26.0.0",
    "protobuf>=6.33.5",
    "python-multipart>=0.0.22",
    "redis",
    "requests",
    "sentry-sdk[django]>=2.33.2",
    "sqlparse>=0.5.4",
    "urllib3>=2.6.3",
    "virtualenv>=20.36.1",
    "wagtail>=7.2.3",
    "whitenoise[brotli]",
]

[dependency-groups]
dev = [
    "channels[daphne]",
    "django-debug-toolbar",
    "pre-commit",
    "ruff>=0.13.1",
    "pegasus-cli>=0.12",
]
prod = [
    "gunicorn",
    "uvicorn[standard]",
]
